# polkadot-hackathon

./: .gitignore  Makefile  QUICK_START.md  README.md  VIDEO_PITCH_SCRIPT.md  docker-compose.yml
.github/workflows/: test-contract.yml
backend/: .dockerignore  .gitignore  API_EXAMPLES.md  README.md  alembic.ini  env.example  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 19bca6efd015_replace_contract_fields_with_blockchain_.py  ba05e9dc83e5_add_is_admin_field_to_users.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  liquidity_providers.py  orders.py  webhooks.py
backend/app/services/: order_service.py  pix_service.py  polkadot_service.py
backend/contracts/: Cargo.toml  README.md  deploy.sh  lib.rs  test.sh
backend/scripts/: init_db.py
backend/tests/: test_polkadot_service.py
docs/: README.md  api-reference.md  deployment.md  implementation-checklist.md  integration.md  overview.md  pix-integration.md  quick-start.md  smart-contracts.md  testing.md  video-pitch-script.md  wallet-integration.md
docs/architecture/: overview.md  tech-stack.md  use-cases.md
docs/backend/: README.md  api-reference.md  smart-contracts.md
docs/frontend/: README.md  wallet-integration.md
docs/getting-started/: quick-start.md
frontend/: .dockerignore  Dockerfile  INSTALLATION.md  INTEGRATION_GUIDE.md  README.md  README_WALLET.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+39 files in other folders)
