[package]
name = "polkapay_escrow"
version = "1.0.0"
authors = ["PolkaPay Team"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }

[dev-dependencies]
ink_e2e = "4.3"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []

